// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zappydoo compile leaves undefined variables blank 1`] = `"Hello and welcome to Fenway park! The weather is  sunny today. Enjoy your day Jason!"`;

exports[`zappydoo compile should return the correct string 1`] = `"Hello and welcome to Fenway park! The weather is sunny today. Enjoy your day Jason!"`;

exports[`zappydoo compile works with if statements 1`] = `
"Hello and welcome to Fenway park!

  You should go outside!
`;

exports[`zappydoo compile works with if statements 2`] = `
"Hello and welcome to Fenway park!


`;

exports[`zappydoo precompile should be able to run the function later 1`] = `"Hello and welcome to Fenway park! The weather is sunny today. Enjoy your day Jason!"`;

exports[`zappydoo render should render the correct string 1`] = `"Hello and welcome to Fenway park! The weather is sunny today. Enjoy your day Jason!"`;

exports[`zappydoo render throws if the property does not exist 1`] = `"The property adjective does not exist in the provided object."`;
